--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>A collection of Cindy's work in SEP.</p>
+                <p> Hi! My name is Cindy. </p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Welcome to my collection of work that I do in SEP.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>I hope you enjoy my collection of SEP projects.</p>
             </div>
         </div>
     </div>
