--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <p>Welcome to my collection of work that I do in SEP.</p>
             </div>
             <div class="col-sm-4">
-                <p>I hope you enjoy my collection of SEP projects.</p>
+                <p>I hope you enjoy my collection of SEP projects..</p>
             </div>
         </div>
     </div>
