--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p> Hi! My name is Cindy. </p>
+                <p> Hello Everyone! My name is Cindy. </p>
             </div>
             <div class="col-sm-4">
                 <p>Welcome to my collection of work that I do in SEP.</p>
             </div>
             <div class="col-sm-4">
-                <p>I hope you enjoy my collection of SEP projects..</p>
+                <p>I hope you enjoy my collection of SEP projects throughout my highschool years.</p>
             </div>
         </div>
     </div>
