change background color

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center" id="projects">
         <h3 class="margin">Projects</h3>
-        <p>Coming soon!</p>
+        <p>Coming soon! To Be Updated! </p>
         <div class="container">
             <div class="row">
 
@@ -81,7 +81,7 @@
                 <p>Welcome to my collection of work that I do in SEP.</p>
             </div>
             <div class="col-sm-4">
-                <p>I hope you enjoy my collection of SEP projects throughout my highschool years.</p>
+                <p>I hope you enjoy my collection of SEP projects throughout my high school years.</p>
             </div>
         </div>
     </div>
