add my freedom project 2019

--- a/projects/freedomproject.html
+++ b/projects/freedomproject.html
@@ -43,10 +43,10 @@
     <div class="container-fluid bg-1">
         <div class="container">
 
-            <h1 class="margin text-center">Example Project</h1>
-            <p>Text about the project</p>
-            <p>More text about the project.</p>
-            <a href="#">Link about the project</a><br>
+            <h1 class="margin text-center">Freedom Project 2019-2020</h1>
+            <p>This is my Freedom Project that I did in my sophomore year of high school (2019-2020)</p>
+            <p> The Freedom Project I did in my sophomore year is to create a website from repl.it. I did a website about the basic information about business "Accounting". Although it's </p>
+            <a href="https://cindyl5697.github.io/freedomweb/"> The website</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
             <!--<a href="http://yourUserName.github.io/yourRepoName">Preview</a>-->
