--- a/projects/freedomproject.html
+++ b/projects/freedomproject.html
@@ -45,7 +45,7 @@
 
             <h1 class="margin text-center">Freedom Project 2019-2020</h1>
             <p>This is my Freedom Project that I did in my sophomore year of high school (2019-2020)</p>
-            <p> The Freedom Project I did in my sophomore year is to create a website from repl.it. I did a website about the basic information about business "Accounting". Although it's </p>
+            <p> The Freedom Project I did in my sophomore year is to create a website from repl.it. I did a website about the basic information about business "Accounting". </p>
             <a href="https://cindyl5697.github.io/freedomweb/"> The website</a><br>
 
             <!--EXAMPLE OF PREVIEW LINK-->
