add Freedom Project website to the index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center" id="projects">
         <h3 class="margin">Projects</h3>
-        <p>Coming soon! To Be Updated! </p>
+        <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Freedom Project - Website</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">10th Grade 2019-2020</h6>
+                            <p class="card-text">The Freedom Project I did in my sophomore year is to create a website from repl.it. I did a website about the basic information about business "Accounting".</p>
+                            <a href="https://cindyl5697.github.io/freedomweb/" class="card-link">Check out my website here</a>
+                        </div>
+                    </div>
+                </div>
+        <p>More Coming Soon! To Be Updated! </p>
         <div class="container">
             <div class="row">
 
