--- a/projects/jsproject2-loops-object-api.html
+++ b/projects/jsproject2-loops-object-api.html
@@ -50,7 +50,7 @@
           <!--  <a href="#">Link about the project</a><br>->
 
             <!--EXAMPLE OF PREVIEW LINK-->
-            <a href="hhttps://cindyl5697.github.io/jsproject2-loops-object-api/">You can check out the PROJECT here</a> <br>
+            <a href="https://cindyl5697.github.io/jsproject2-loops-object-api/">You can check out the PROJECT here</a> <br>
             <!--EXAMPLE OF GITHUB LINK-->
             <a href="https://github.com/cindyl5697/jsproject2-loops-object-api">You can check out the GITHUB of the project</a><br>
 
