--- a/projects/jsproject2-loops-object-api.html
+++ b/projects/jsproject2-loops-object-api.html
@@ -56,8 +56,9 @@
 
             <img src="../img/User-input-look.png" class="img-fluid project-img">
             <p> In this screenshot, you'll see a sneak peek of the program, in which you'll be asked to input a store category with some suggested categories provided, such as Footwear, Food, Bank, and "Home Good"</p> <br>
-            <img src="../img/Result.png" class="img-fluid project-img">
-            <p> The screenshot above demonstrates a preview of the result if the user has the input "Food". You will see the type of the store, the name of the store, and the website of the store if it's provided. The screenshot will have similar formatting for every user's input.</p>
+            
+         <img src="../img/Result.png" class="img-fluid project-img">
+            <p> The screenshot above demonstrates a preview of the result if the user has the input "Food". You will see the type of the store, the name of the store, and the website of the store if it's provided. The screenshot will have similar formatting for every user's input.</p> <br>
 
             <div class="row">
 
