--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                         </div>
                     </div>
                 </div>
+                <!-- SEP 11 !--> 
+        <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title">Project 2 - Loops, Objects, and API </h5>
+                            <h6 class="card-subtitle mb-2 text-muted">11th Grade 2020-2021 (Date: 03/15/2021)</h6>
+                            <p class="card-text">This is a Project I did in my junior year of high school. I did a program that allows user to input their type of store in the Filton Street Mall, and it'll print out all the stores that fall under the user's input store categories.</p>
+                            <a href="https://cindyl5697.github.io/freedomweb/" class="card-link">Check out my program here</a>
+                        </div>
+                    </div>
+                </div>
         <p>More Coming Soon! To Be Updated! </p>
         <div class="container">
             <div class="row">
