--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                     </div>
                 </div>
                 <!-- SEP 11 !--> 
+                <br> </br>
+        <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Javascript Project - Loops, Objects, and API </h5>
