--- a/index.html
+++ b/index.html
@@ -57,9 +57,8 @@
                             <a href="https://cindyl5697.github.io/freedomweb/" class="card-link">Check out my website here</a>
                         </div>
                     </div>
-                </div>
+                </div> <br> 
                 <!-- SEP 11 !--> 
-
         <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
