--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a href="https://cindyl5697.github.io/freedomweb/" class="card-link">Check out my website here</a>
                         </div>
                     </div>
-                </div> <br> 
+                </div> <br>
                 <!-- SEP 11 !--> 
         <div class="col-sm-4">
                     <div class="card">
@@ -67,6 +67,9 @@
                             <p class="card-text">This is a Project I did in my junior year of high school. I did a program that allows user to input their type of store in the Filton Street Mall, and it'll print out all the stores that fall under the user's input store categories.</p>
                             <a href="projects/jsproject2-loops-object-api.html/" class="card-link">Check out my program here</a>
                         </div>
+                    </div>
+                 </div>
+                
         <p>More Coming Soon! To Be Updated! </p>
         <div class="container">
             <div class="row">
