--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Javascript Project - Loops, Objects, and API </h5>
                             <h6 class="card-subtitle mb-2 text-muted">11th Grade 2020-2021 </h6>
-                            <p class="card-text">This is a Project I did in my junior year of high school. I did a program that allows user to input their type of store in the Filton Street Mall, and it'll print out all the stores that fall under the user's input store categories.</p>
+                            <p class="card-text">This is a project that allows user to input their type of store in the Filton Street Mall, and it'll print out all the stores that fall under the user's input store categories.</p>
                             <a href="projects/jsproject2-loops-object-api.html" class="card-link">Check out my program here</a>
                         </div>
                     </div>
