--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <a href="https://cindyl5697.github.io/freedomweb/" class="card-link">Check out my website here</a>
                         </div>
                     </div>
-                </div> <br>
+                </div> 
                 <!-- SEP 11 !--> 
        
                  <div class="col-sm-4">
