--- a/projects/jsproject2-loops-object-api.html
+++ b/projects/jsproject2-loops-object-api.html
@@ -56,10 +56,10 @@
             <a href="https://github.com/cindyl5697/jsproject2-loops-object-api">You can check out the GITHUB of the project</a><br>
 
             <img src="../img/User-input-look.png" class="img-fluid project-img">
-            <p> In this screenshot, you'll see a sneak peek of the program, in which you'll be asked to input a store category with some suggested categories provided, such as Footwear, Food, Bank, and "Home Good"</p> <br>
+            <p> In this screenshot (please zoom in to see better), you'll see a sneak peek of the program, in which you'll be asked to input a store category with some suggested categories provided, such as Footwear, Food, Bank, and "Home Good"</p> <br>
             
          <img src="../img/Result.png" class="img-fluid project-img">
-            <p> The screenshot above demonstrates a preview of the result if the user has the input "Food". You will see the type of the store, the name of the store, and the website of the store if it's provided. The screenshot will have similar formatting for every user's input.</p> <br>
+            <p> The screenshot above (please zoom in to see better) demonstrates a preview of the result if the user has the input "Food". You will see the type of the store, the name of the store, and the website of the store if it's provided. The screenshot will have similar formatting for every user's input.</p> <br>
 
             <div class="row">
 
