--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                  </div>
-                 
+               </div>  
         <p>More Coming Soon! To Be Updated! </p>
         <div class="container">
             <div class="row">
