--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div> 
                 <!-- SEP 11 !--> 
        
-                 <div class="col-sm-4">
+        <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Javascript Project - Loops, Objects, and API </h5>
@@ -70,7 +70,8 @@
                         </div>
                     </div>
                  </div>
-               </div>  
+    </div
+               
         <p>More Coming Soon! To Be Updated! </p>
         <div class="container">
             <div class="row">
