--- a/index.html
+++ b/index.html
@@ -60,17 +60,16 @@
                 </div> 
                 <!-- SEP 11 !--> 
        
-        <div class="col-sm-4">
+  <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Javascript Project - Loops, Objects, and API </h5>
-                            <h6 class="card-subtitle mb-2 text-muted">11th Grade 2020-2021 </h6>
+                            <h5 class="card-title">Javascript Project - Loops, Objects, and API</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">11th Grade 2020-2021</h6>
                             <p class="card-text">This is a project that allows user to input their type of store in the Filton Street Mall, and it'll print out all the stores that fall under the user's input store categories.</p>
-                            <a href="projects/jsproject2-loops-object-api.html" class="card-link">Check out my program here</a>
+                            <a href="#" class="card-link">More</a>
                         </div>
                     </div>
-                 </div>
-  
+                </div>
                
         <p>More Coming Soon! To Be Updated! </p>
         <div class="container">
