--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
                 </div> 
                 <!-- SEP 11 !--> 
        
+
   <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Javascript Project - Loops, Objects, and API</h5>
                             <h6 class="card-subtitle mb-2 text-muted">11th Grade 2020-2021</h6>
                             <p class="card-text">This is a project that allows user to input their type of store in the Filton Street Mall, and it'll print out all the stores that fall under the user's input store categories.</p>
-                            <a href="#" class="card-link">More</a>
+                            <a href="#" class="card-link">Check out my project here</a>
                         </div>
                     </div>
                 </div>
