--- a/projects/jsproject2-loops-object-api.html
+++ b/projects/jsproject2-loops-object-api.html
@@ -55,7 +55,7 @@
             <!--EXAMPLE OF GITHUB LINK-->
             <a href="https://github.com/cindyl5697/jsproject2-loops-object-api">You can check out the GITHUB of the project</a><br>
 
-            <img src="../img/User-input-look.png" class="img-fluid project-img">
+            <img src="../img/Users-input-look.png" class="img-fluid project-img">
             <p> In this screenshot above, you'll see a sneak peek of the project, in which you'll be asked to input a store category with some suggested categories provided, such as Footwear, Food, Bank, and "Home Good"</p> <br>
             
          <img src="../img/Result.png" class="img-fluid project-img">
