--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <h5 class="card-title">Freedom Project: TO DO LIST</h5>
                             <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
                             <p class="card-text">A TO-DO LIST that I have made with my partner, Nina Li, using Google Firebase. The project we made is a simple TO-DO List that allows users to input and save their tasks.</p>
-                            <a href="#" class="card-link">More</a>
+                            <a href="SEP11-Cindy-Nina-FP/index.html" class="card-link">Check out the freedom project here</a>
                         </div>
                     </div>
                 </div>
