--- a/index.html
+++ b/index.html
@@ -85,13 +85,24 @@
         <p>More Coming Soon! To Be Updated! </p>
         <div class="container">
             <div class="row">
-                
+                <!--SEP 09-->
+ <div class="col-sm-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title"> All Project from SEP 9th Grade</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">9th Grade 2018-2019</h6>
+                            <p class="card-text">This is a collection of the projects I have done throughout my 9th Grade SEP class. This collection of projects contain Projects from Scratch, Robotics, and Python.</p>
+                            <a href="https://sites.google.com/a/hstat.org/cindyl5697sep09/" class="card-link">Click here to see projects</a>
+                        </div>
+                    </div>
+                </div> 
+                <!--SEP 10-->
  <div class="col-sm-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Freedom Project - Website</h5>
                             <h6 class="card-subtitle mb-2 text-muted">10th Grade 2019-2020</h6>
-                            <p class="card-text">The Freedom Project I did in my sophomore year is to create a website from repl.it. I did a website about the basic information about business "Accounting".</p>
+                            <p class="card-text">The Freedom Project I did in my sophomore year is to create a website from repl.it. I did a website about the basic information about business "Accounting."</p>
                             <a href="https://cindyl5697.github.io/freedomweb/" class="card-link">Check out my website here</a>
                         </div>
                     </div>
@@ -103,7 +114,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Javascript Project - Loops, Objects, and API</h5>
                             <h6 class="card-subtitle mb-2 text-muted">11th Grade 2020-2021</h6>
-                            <p class="card-text">This is a project that allows user to input their type of store in the Fulton Street Mall, and it'll print out all the stores that fall under the user's input store categories.</p>
+                            <p class="card-text">This project allows users to input their type of store in the Fulton Street Mall, and it'll print out all the stores that fall under the user's input store categories using API, loops, and objects.</p>
                             <a href="projects/jsproject2-loops-object-api.html" class="card-link">Check out my project description here</a>
                         </div>
                     </div>
@@ -113,9 +124,9 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Freedom Project: TO DO LIST</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">11th Grade</h6>
+                            <h6 class="card-subtitle mb-2 text-muted">11th Grade 2020-2021</h6>
                             <p class="card-text">A TO-DO LIST that I have made with my partner, Nina Li, using Google Firebase. The project we made is a simple TO-DO List that allows users to input and save their tasks.</p>
-                            <a href="SEP11-Cindy-Nina-FP/index.html" class="card-link">Check out the freedom project here</a>
+                            <a href="SEP11-Cindy-Nina-FP/index.html" class="card-link">Check out the TODO LIST freedom project here</a>
                         </div>
                     </div>
                 </div>
